--- a/Banners/s3/p1/desktop/style.css
+++ b/Banners/s3/p1/desktop/style.css
@@ -14,19 +14,16 @@
   text-align: center;
   color: #fff;
   box-sizing: border-box;
-  padding: 45px 30px;
+  padding: 30px;
 }
-.__two.mx-banner,
-.__three.mx-banner,
-.__four.mx-banner,
-.__six.mx-banner {
-  padding: 30px 30px;
-}
-.__seven.mx-banner {
-  padding: 25px 30px;
+.mx-banner.__three {
+  padding: 25px 30px 10px 30px;
 }
 .mx-banner.__active {
   top: 10px;
+}
+.mx-banner.__one {
+  padding: 45px 30px;
 }
 .mx-banner-close {
   position: absolute;
@@ -58,54 +55,47 @@
 .mx-banner-btn:hover {
   background-color: #c3001e;
 }
-.__seven .mx-banner-btn {
-  bottom: -16px;
+.__three .mx-banner-btn {
+  bottom: -20px;
 }
-.mx-banner-txt {
-  font-size: 14px;
-  font-family: "Roboto", sans-serif !important;
-  letter-spacing: 1px;
-  line-height: 1.5;
-  text-transform: uppercase;
-}
-.__two .mx-banner-txt,
-.__three .mx-banner-txt {
-  font-size: 12px;
-  font-weight: 300;
-}
+
 .mx-banner-from-to {
-  margin: 30px 0;
-}
-.__seven .mx-banner-from-to {
-  margin: 0;
-}
-.__two .mx-banner-from-to,
-.__four .mx-banner-from-to,
-.__five .mx-banner-from-to,
-.__six .mx-banner-from-to {
-  margin: 10px 0;
-}
-.__three .mx-banner-from-to {
-  margin: 10px 0 0;
 }
 .mx-banner-from,
 .mx-banner-to {
-  font-size: 30px;
-  display: block;
-  text-transform: uppercase;
-  /*font-family: "helveticaneuecyrbold";*/
-  line-height: 1.2;
-}
-.__two.mx-banner-from,
-.__two.mx-banner-to {
-  font-size: 23px;
-}
-.mx-banner-pretext {
   display: block;
   text-transform: uppercase;
   font-family: "Roboto", sans-serif !important;
-  font-weight: bold;
-  font-size: 24px;
+  line-height: 1.2;
+  font-weight: 600;
+  font-size: 26px;
+}
+.mx-banner-price {
+  line-height: 1;
+  font-size: 60px;
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 200;
+}
+.__five .mx-banner-price {
+}
+.mx-banner-price:before {
+  content: "от";
+  margin-right: 10px;
+  font-size: 33px;
+  vertical-align: top;
+  line-height: 1.4;
+}
+.__five .mx-banner-price:before {
+  font-size: 70px;
+  font-size: 32px;
+}
+.mx-banner-price:after {
+  content: "₽";
+  margin-left: 10px;
+  font-family: "Roboto", sans-serif !important;
+  font-size: 33px;
+  vertical-align: top;
+  line-height: 1.5;
 }
 .mx-banner-promo {
   padding: 24px 67px 10px 50px;
@@ -143,101 +133,113 @@
   line-height: 1.4;
   margin-top: 14px;
 }
-.mx-banner-disc {
-  display: inline-block;
-  font-size: 44px;
-  font-family: "Roboto", sans-serif !important;
-  letter-spacing: -3.3px;
-  margin-top: 13px;
-}
 .mx-banner-exp {
   display: block;
   float: left;
   text-align: left;
-  font-size: 11px;
+  font-size: 9px;
   font-family: "Roboto", sans-serif !important;
   font-weight: 100;
   letter-spacing: 0.8px;
   line-height: 1.2;
   margin-top: 5px;
 }
-.__three .mx-banner-exp {
-  margin-top: 0;
+.__two .mx-banner-exp {
+  font-size: 11px;
+  letter-spacing: 1.5px;
+  line-height: 1.4;
 }
-.mx-banner-bonuses {
+.__three .mx-banner-desc,
+.__three .mx-banner-exp {
+  /*font-size: 11px;*/
+  /*margin: 4px 0;*/
+}
+.mx-banner-disc {
+  display: inline-block;
+  font-size: 44px;
+  font-family: "Roboto", sans-serif !important;
+  letter-spacing: -3.3px;
+  margin-top: 10px;
+}
+.mx-banner-swag {
   display: block;
+  font-family: "Roboto", sans-serif !important;
+  font-size: 58px;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+.mx-banner-swag:before {
+  content: "Ваша накопленная скидка";
+  font-family: "Roboto", sans-serif !important;
+  display: block;
+  text-transform: uppercase;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  font-size: 14px;
+  margin-top: 10px;
+  font-weight: 100;
+}
+.mx-banner-swag:after {
+  content: "₽ *";
+  margin-left: 10px;
+  font-size: 30px;
+  vertical-align: top;
+  line-height: 1.4;
+  font-family: "Roboto", sans-serif !important;
+}
+.mx-banner-exp {
+  /*margin-top: 10px;*/
+}
+
+.mx-banner-bon {
   float: left;
   line-height: 2;
   font-size: 15px;
   font-family: "Roboto", sans-serif !important;
   letter-spacing: 1px;
   font-weight: bold;
+  position: relative;
 }
-.__five .mx-banner-bonuses {
-  display: block;
-  width: 100%;
-  font-size: 26px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  line-height: 1.3;
-}
-.mx-banner-light {
-  display: block;
-  font-size: 13px;
+.mx-banner-bon:after {
+  position: absolute;
+  left: 0;
+  top: 20px;
+  content: "Суммируйте скидку с бонусами";
   font-family: "Roboto", sans-serif !important;
-  line-height: 2.1;
-  letter-spacing: 0.1px;
+  font-size: 10px;
+  letter-spacing: normal;
   font-weight: 100;
 }
-.__five .mx-banner-light,
-.__six .mx-banner-light {
-  line-height: 1.5;
-  font-size: 11px;
-}
-.__five .mx-banner-light {
-  font-size: 13px;
-  margin-bottom: 20px;
-}
-.mx-banner-profit {
-  font-size: 50px;
-  font-family: "Roboto", sans-serif !important;
+.mx-banner-balance {
+  font-size: 24px;
+  text-transform: uppercase;
   display: block;
-  margin-top: 5px;
-  font-weight: 300;
+  font-family: "Roboto", sans-serif !important;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+.mx-banner-balance:before {
+  font-family: "Roboto", sans-serif !important;
+  content: "Ваш баланс";
+  display: block;
+  margin-top: 20px;
+  line-height: 2;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: 100;
 }
 .mx-banner-offer {
+  display: block;
+  text-align: center;
   font-family: "Roboto", sans-serif !important;
-  font-weight: 100;
   font-size: 14px;
-  letter-spacing: 0.8px;
-  line-height: 1.3;
-}
-.__six .mx-banner-profit {
-  font-size: 62px;
-}
-.mx-banner-profit:before {
-  content: "от";
-  font-size: 29px;
-  font-family: "Roboto", sans-serif !important;
-  vertical-align: top;
+  letter-spacing: 1px;
   line-height: 1.2;
-  margin-right: 5px;
+  margin-top: 15px;
+  font-weight: 100;
 }
-.__six .mx-banner-profit:before {
-  line-height: 2;
-  font-size: 24px;
-}
-.mx-banner-profit:after {
-  content: "₽ *";
-  font-family: "Roboto", sans-serif !important;
-  margin-left: 10px;
-  font-size: 26px;
-  vertical-align: top;
-  line-height: 1.5;
-}
-.__six .mx-banner-profit:after {
-  font-size: 24px;
-  line-height: 2;
+.__five .mx-banner-offer {
+  font-size: 11px;
 }
 /* Тестовая форма */
 .test-data-form {
@@ -267,12 +269,4 @@
   height: 20px;
   text-indent: 20px;
   font-size: 12px;
-}
-.mx-banner-burn {
-  display: block;
-  margin: 39px;
-  font-family: "Roboto", sans-serif !important;
-  font-size: 15px;
-  letter-spacing: 0.6px;
-  line-height: 1.5;
 }
