--- a/Banners/s1/p1/desktop/style.css
+++ b/Banners/s1/p1/desktop/style.css
@@ -85,15 +85,15 @@
   line-height: 1.1;
 }
 .mx-banner-promo {
-  padding: 24px 67px 10px 50px;
-  border: 1.9px solid #fff;
+  padding: 24px 0 10px 0;
+  border: 2px solid #fff;
   border-radius: 20px;
   text-transform: uppercase;
   font-size: 26px;
   font-weight: 500;
   font-family: "Roboto", sans-serif !important;
   letter-spacing: 1.3px;
-  width: 140px;
+  width: 100%;
   margin: 15px auto 0;
   display: block;
   position: relative;
@@ -101,7 +101,7 @@
 .mx-banner-promo:before {
   content: "ваш промокод";
   position: absolute;
-  top: 13px;
+  top: 17px;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 11px;
