--- a/Banners/s1/p2/desktop/style.css
+++ b/Banners/s1/p2/desktop/style.css
@@ -58,7 +58,7 @@
 }
 .mx-discount-date {
   display: inline-block;
-  margin-top: 10px;
+  margin: 16px 10px 0 0;
   font-size: 11px;
   margin-right: 10px;
   font-family: "Roboto", sans-serif !important;
@@ -68,12 +68,6 @@
   line-height: 1.2;
   text-align: left;
 }
-/*.mx-discount-date:before {*/
-/*content: "Скидка на авиабилет в обратном направлении";*/
-/*position: absolute;*/
-/*top: -27px;*/
-/*text-align: left;*/
-/*}*/
 .mx-discount {
   display: inline-block;
   font-size: 51px;
@@ -81,21 +75,21 @@
   letter-spacing: -3.3px;
 }
 .mx-banner-promo {
-  padding: 24px 61px 10px 41px;
-  border: 1.9px solid #fff;
+  padding: 24px 0 10px 0;
+  border: 2px solid white;
   border-radius: 20px;
   text-transform: uppercase;
   font-size: 26px;
   font-weight: 500;
   font-family: "Roboto", sans-serif !important;
   letter-spacing: 1.3px;
-  width: 140px;
+  width: 100%;
   margin: 15px auto 0;
   display: block;
   position: relative;
 }
 .mx-banner-promo.__bottom {
-  margin-top: 55px;
+  margin-top: 40px;
 }
 .mx-banner-promo:before {
   content: "ваш промокод";
@@ -128,25 +122,24 @@
 }
 .mx-banner-summ:after {
   content: "Бонусов";
-  margin-left: 10px;
   text-transform: uppercase;
   font-size: 16px;
   vertical-align: top;
-  line-height: 1.3;
+  line-height: 1.6;
 }
 .discount-dkl-head,
 .discount-dkl {
   display: block;
 }
 .discount-dkl-head {
-  margin-top: 130px;
+  margin-top: 120px;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 18px;
 }
 .discount-dkl,
 .discount-no-dkl {
-  line-height: 1.3;
+  line-height: 1.1;
   font-size: 35px;
   font-family: "Roboto", sans-serif !important;
   font-weight: 300;
@@ -158,7 +151,7 @@
   margin-left: 5px;
   font-size: 20px;
   vertical-align: top;
-  line-height: 1.6;
+  line-height: 2.2;
 }
 .discount-no-dkl:before {
   display: block;
