--- a/Banners/s1/p3/mobile/style.css
+++ b/Banners/s1/p3/mobile/style.css
@@ -35,11 +35,7 @@
   color: #fff;
   transform: rotate(-45deg);
   cursor: pointer;
-  font-weight: 300;
-  font-style: normal;
-}
-.__index .mx-banner-close {
-  display: none;
+  font-family: initial;
 }
 .mx-banner-head {
   font-size: 18px;
@@ -61,16 +57,15 @@
   position: absolute;
   font-size: 35px;
   text-align: center;
-  right: 40px;
-  bottom: 33px;
+  right: 50px;
+  bottom: 50px;
   line-height: 1.1;
   font-weight: 100;
-  top: 44px;
 }
 .mx-banner-armchair:after {
   content: "";
   position: absolute;
-  top: 18%;
+  top: 50%;
   left: 50%;
   border: 2px solid #fff;
   border-radius: 50%;
