--- a/Banners/s2/all/desktop/style.css
+++ b/Banners/s2/all/desktop/style.css
@@ -108,15 +108,15 @@
   font-size: 24px;
 }
 .mx-banner-promo {
-  padding: 24px 67px 10px 50px;
-  border: 1.9px solid #fff;
+  padding: 24px 0 10px 0;
+  border: 2px solid white;
   border-radius: 20px;
   text-transform: uppercase;
   font-size: 26px;
   font-weight: 500;
   font-family: "Roboto", sans-serif !important;
   letter-spacing: 1.3px;
-  width: 140px;
+  width: 100%;
   margin: 10px auto 0;
   display: block;
   position: relative;
