--- a/Banners/s2/all/mobile/style.css
+++ b/Banners/s2/all/mobile/style.css
@@ -14,7 +14,7 @@
   text-align: left;
   color: #fff;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 15px;
   transform: translate(-50%, 0);
 }
 .mx-banner-close {
@@ -77,9 +77,9 @@
 }
 .mx-banner-offer {
   font-family: "Roboto", sans-serif !important;
-  line-height: 1.5;
-  letter-spacing: 1px;
-  font-size: 14px;
+  line-height: 2.5;
+  font-size: 12px;
+  font-weight: 300;
 }
 .mx-banner-btn:hover {
   background-color: #c3001e;
@@ -121,6 +121,14 @@
   text-align: center;
   display: block;
   width: 100%;
+}
+.__seven .mx-banner-burn {
+  position: absolute;
+  bottom: 6px;
+  left: 0;
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 .__two .mx-banner-from-to {
   line-height: 1.2;
@@ -188,11 +196,11 @@
   line-height: 1.4;
 }
 .mx-banner-disc {
-  font-size: 25px;
+  font-size: 34px;
   float: right;
   font-family: "Roboto", sans-serif !important;
   font-weight: 300;
-  line-height: 0.8;
+  line-height: 1;
   margin-right: 15px;
 }
 .mx-discount-date {
@@ -230,10 +238,14 @@
   letter-spacing: 1px;
 }
 .__three .mx-banner-bonuses {
-  line-height: 2;
+  line-height: 1;
   font-size: 14px;
   text-align: center;
   width: 100%;
+}
+.__almost .mx-banner-bonuses {
+  text-transform: uppercase;
+  margin-top: 10px;
 }
 .__five .mx-banner-bonuses {
   display: block;
@@ -252,8 +264,8 @@
 .__four .mx-banner-light {
   width: 100%;
   text-align: center;
-  font-size: 14px;
-  margin-top: 4px;
+  font-size: 12px;
+  font-weight: 300;
 }
 .__five .mx-banner-light {
   line-height: 1.5;
@@ -262,6 +274,15 @@
 .__five .mx-banner-light {
   font-size: 13px;
   margin-bottom: 20px;
+}
+.__six .mx-banner-light {
+  text-align: center;
+  width: 100%;
+  font-size: 10px;
+  letter-spacing: 0.5px;
+  line-height: 1.2;
+  margin-top: 3px;
+  font-weight: 100;
 }
 .mx-banner-profit {
   font-size: 50px;
@@ -282,6 +303,7 @@
 .__six .mx-banner-profit {
   text-align: center;
   line-height: 0.8;
+  font-size: 40px;
 }
 .mx-banner-profit:before {
   content: "от";
@@ -299,6 +321,12 @@
   margin-right: 5px;
   text-transform: uppercase;
   font-family: inherit;
+}
+.__six .mx-banner-profit:before {
+  content: "Ваша скидка от";
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 2.1;
 }
 .mx-banner-profit:after {
   content: "₽ *";
@@ -334,12 +362,4 @@
   padding: 8px 30px 1px;
   left: 30px;
   bottom: 30px;
-}
-.__three .mx-banner-disc {
-  font-size: 25px;
-  float: right;
-  font-family: "Roboto", sans-serif !important;
-  font-weight: 300;
-  line-height: 0.8;
-  margin-right: 15px;
 }
