--- a/Banners/s3/p1/desktop/style.css
+++ b/Banners/s3/p1/desktop/style.css
@@ -98,15 +98,15 @@
   line-height: 1.5;
 }
 .mx-banner-promo {
-  padding: 24px 67px 10px 50px;
-  border: 1.9px solid #fff;
+  padding: 24px 0 10px 0;
+  border: 2px solid white;
   border-radius: 20px;
   text-transform: uppercase;
   font-size: 26px;
   font-weight: 500;
   font-family: "Roboto", sans-serif !important;
   letter-spacing: 1.3px;
-  width: 140px;
+  width: 100%;
   margin: 10px auto 0;
   display: block;
   position: relative;
@@ -159,7 +159,7 @@
   font-size: 44px;
   font-family: "Roboto", sans-serif !important;
   letter-spacing: -3.3px;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 .mx-banner-swag {
   display: block;
