--- a/Banners/s3/p1/mobile/style.css
+++ b/Banners/s3/p1/mobile/style.css
@@ -222,11 +222,11 @@
 .__two .mx-banner-desc,
 .__two .mx-banner-exp {
   clear: both;
-  font-size: 10px;
+  font-size: 12px;
   display: inline-block;
   font-family: "Roboto", sans-serif !important;
   float: left;
-  font-weight: 200;
+  font-weight: 300;
   line-height: 1.3;
 }
 .__three .mx-banner-desc {
@@ -236,12 +236,13 @@
 }
 .mx-banner-disc {
   display: inline-block;
-  font-size: 28px;
+  font-size: 32px;
   font-family: "Roboto", sans-serif !important;
   float: left;
-  line-height: 0.8;
+  line-height: 1;
   font-weight: 300;
   letter-spacing: -1.4px;
+  margin-left: 8px;
 }
 .__three .mx-banner-disc {
   font-size: 20px;
@@ -259,7 +260,6 @@
   text-align: left;
   display: block;
   font-weight: 300;
-  position: absolute;
   bottom: 70px;
 }
 .mx-banner-swag:before {
@@ -332,6 +332,7 @@
   font-size: 10px;
   letter-spacing: normal;
 }
+.__two .mx-banner-bon:after,
 .__three .mx-banner-bon:after,
 .__four .mx-banner-bon:after {
   display: none;
@@ -375,6 +376,7 @@
   float: left;
   text-align: left;
   margin: 0;
-  font-size: 9px;
+  font-size: 10px;
   font-weight: 300;
+  margin-top: -7px;
 }
